.provarCaches/00D5f000005vwGkEAI/objects/rstk__icinvrecon__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_icinvrecon</customHelpPage>
    <description>icinvrecon__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icinvrecon_icitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  
rstk__icinvrecon_site__r.rstk__sysite_site__c &amp; &apos;_&apos; &amp;  
rstk__icinvrecon_proj__r.rstk__pjproj_proj__c &amp; &apos;_&apos; &amp;  
rstk__icinvrecon_locid__r.rstk__sylocid_locid__c &amp; &apos;_&apos; &amp;  
rstk__icinvrecon_locnum__c &amp; &apos;_&apos; &amp; 
(IF(ISBLANK(rstk__icinvrecon_lotno__c), &apos;&apos;, rstk__icinvrecon_lotno__c )) &amp; &apos;_&apos; &amp; (IF(ISBLANK(rstk__icinvrecon_batchno__c), &apos;&apos;, TEXT(rstk__icinvrecon_batchno__c))) &amp; &apos;_&apos; &amp; TEXT(rstk__icinvrecon_date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icinvrecon_icitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__icinvrecon_site__r.rstk__sysite_site__c &amp; &apos;_&apos; &amp;  rstk__icinvrecon_proj__r.rstk__pjproj_proj__c &amp; &apos;_&apos; &amp;  rstk__icinvrecon_locid__r.rstk__sylocid_locid__c &amp; &apos;_&apos; &amp;  rstk__icinvrecon_locnum__c &amp; IF(ISBLANK(rstk__icinvrecon_lotno__c), &apos;&apos;, rstk__icinvrecon_lotno__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_batchno__c</fullName>
        <description>Batch Number</description>
        <inlineHelpText>The batch number of the batch that this record is part of.</inlineHelpText>
        <label>Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Transaction date</description>
        <inlineHelpText>The date that this record was created.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Inventory Division</description>
        <inlineHelpText>The Inventory Division in which the Inventory Location exists.</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation</relationshipLabel>
        <relationshipName>icinvrecons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_errortext__c</fullName>
        <inlineHelpText>If an error occurs when trying to perform and adjustment for this Item/Location, it will be displayed here.</inlineHelpText>
        <label>Adjustment Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_hold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this record will not be processed.</inlineHelpText>
        <label>Hold Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_icinvreconb__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Batch Header</label>
        <referenceTo>rstk__icinvreconb__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation</relationshipLabel>
        <relationshipName>icinvrecons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Inventory Item Number for this Inventory Location.</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation</relationshipLabel>
        <relationshipName>icinvrecons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_iclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inventory Location records for the Inventory Division and Item Number defined.</inlineHelpText>
        <label>Inventory By Location</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation</relationshipLabel>
        <relationshipName>icinvrecons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_locid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Location id</description>
        <inlineHelpText>The Inventory Location ID for the Location for this record.</inlineHelpText>
        <label>Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation</relationshipLabel>
        <relationshipName>icinvrecon</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_locnum__c</fullName>
        <description>Location number</description>
        <inlineHelpText>The Location Number for the Location for this record.</inlineHelpText>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_locqty__c</fullName>
        <description>Actual location Qty</description>
        <inlineHelpText>The quantity counted during the reconciliation process.  This value will be used to replace the &quot;system&quot; quantity once this record is processed.</inlineHelpText>
        <label>Actual Location Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_lotexpiredate__c</fullName>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_lotno__c</fullName>
        <description>Lot Number</description>
        <inlineHelpText>The lot number for the lot controlled item for the Inventory Division/Inventory Location ID/Location Number defined.</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_matchconf__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that actual Quantities and corresponding number of Serials matches the system.</inlineHelpText>
        <label>Qty/Serials Match Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_origlocqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System Location Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_origserials__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>System Serial Numbers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this record has been processed.</inlineHelpText>
        <label>Adjustment Transaction Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Project Number associated with the Location record.</inlineHelpText>
        <label>Project Number</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation</relationshipLabel>
        <relationshipName>icinvrecons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_responded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>icinvrecon_responded__c</description>
        <label>Reconciliation Has Been Responded To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_serials__c</fullName>
        <description>Serial numbers</description>
        <inlineHelpText>All of the serial numbers for the serialized item for the Inventory Division/Inventory Location ID/Location Number defined.</inlineHelpText>
        <label>Serial Numbers</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Inventory Site</description>
        <inlineHelpText>The Inventory Site in which the Location record exists.</inlineHelpText>
        <label>Inventory Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Physical Inventory Reconciliation</relationshipLabel>
        <relationshipName>icinvrecons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icinvrecon_zeroconf__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that there is 0 on-hand in this location.  If the Actual Location Qty is not zero, checking this will set it to 0.</inlineHelpText>
        <label>Zero On Hand Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Physical Inventory Reconciliation</label>
    <listViews>
        <fullName>rstk__RS_Physical_Inventory_Reconciliation</fullName>
        <columns>NAME</columns>
        <columns>rstk__icinvrecon_batchno__c</columns>
        <columns>rstk__icinvrecon_div__c</columns>
        <columns>rstk__icinvrecon_site__c</columns>
        <columns>rstk__icinvrecon_icitem__c</columns>
        <columns>rstk__icinvrecon_proj__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icinvrecon_locid__c</columns>
        <columns>rstk__icinvrecon_locnum__c</columns>
        <columns>rstk__icinvrecon_locqty__c</columns>
        <columns>rstk__icinvrecon_lotno__c</columns>
        <columns>rstk__icinvrecon_serials__c</columns>
        <columns>rstk__icinvrecon_origserials__c</columns>
        <columns>rstk__icinvrecon_date__c</columns>
        <columns>rstk__icinvrecon_processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>Physical Inventory Reconciliation</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physical Inventory Reconciliation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Actual_Location_Qty</fullName>
        <active>true</active>
        <description>Actual Location Qty should be greater or equal to 0 , Negative Number is not allowed</description>
        <errorConditionFormula>rstk__icinvrecon_locqty__c &lt; 0</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_locqty__c</errorDisplayField>
        <errorMessage>Actual Location Qty should be greater or equal to 0 , Negative Number is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Adjustment_Transaction_Processed</fullName>
        <active>false</active>
        <description>Not Modifiable in Edit Mode</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;  PRIORVALUE(rstk__icinvrecon_processed__c) &amp;&amp; ISCHANGED(rstk__icinvrecon_processed__c)</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_processed__c</errorDisplayField>
        <errorMessage>Adjustment Transaction Processed is not Modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Inventory_Site</fullName>
        <active>true</active>
        <description>Inventory_Site is Required</description>
        <errorConditionFormula>ISBLANK(rstk__icinvrecon_site__c) || rstk__icinvrecon_site__r.rstk__sysite_div__c != rstk__icinvrecon_div__c</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_site__c</errorDisplayField>
        <errorMessage>Inventory Site is Required and must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Item_Number1</fullName>
        <active>true</active>
        <description>Item_Number Is Required</description>
        <errorConditionFormula>ISBLANK( rstk__icinvrecon_icitem__c ) || rstk__icinvrecon_icitem__r.rstk__icitem_div__c != rstk__icinvrecon_div__c</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_icitem__c</errorDisplayField>
        <errorMessage>Item Number is Required  and must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Location_ID</fullName>
        <active>true</active>
        <description>Location ID is Required</description>
        <errorConditionFormula>ISBLANK( rstk__icinvrecon_locid__c )</errorConditionFormula>
        <errorMessage>Location ID is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Location_Number</fullName>
        <active>true</active>
        <description>Location Number is Required</description>
        <errorConditionFormula>ISBLANK( rstk__icinvrecon_locnum__c )</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_locnum__c</errorDisplayField>
        <errorMessage>Location Number is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Processed_records</fullName>
        <active>true</active>
        <description>If record is already processed then Field is not Modifiable</description>
        <errorConditionFormula>IF( AND(rstk__icinvrecon_processed__c, OR( ISCHANGED(rstk__icinvrecon_div__c) ,ISCHANGED(rstk__icinvrecon_batchno__c),ISCHANGED(rstk__icinvrecon_date__c),ISCHANGED(rstk__icinvrecon_icitem__c),ISCHANGED(rstk__icinvrecon_iclocitem__c),ISCHANGED(rstk__icinvrecon_site__c),ISCHANGED(rstk__icinvrecon_proj__c),ISCHANGED(rstk__icinvrecon_locid__c),ISCHANGED(rstk__icinvrecon_locnum__c),ISCHANGED(rstk__icinvrecon_locqty__c),ISCHANGED(rstk__icinvrecon_zeroconf__c),ISCHANGED(rstk__icinvrecon_lotno__c),ISCHANGED(rstk__icinvrecon_serials__c),ISCHANGED(rstk__icinvrecon_hold__c))) , true, false)</errorConditionFormula>
        <errorMessage>If record is already processed then Fields value are not Modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Project_Number</fullName>
        <active>true</active>
        <description>Project_Number is Required</description>
        <errorConditionFormula>rstk__icinvrecon_div__r.rstk__sydiv_projact__c &amp;&amp; ( ISBLANK(rstk__icinvrecon_proj__c) || rstk__icinvrecon_proj__r.rstk__pjproj_div__c != rstk__icinvrecon_div__c )</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_proj__c</errorDisplayField>
        <errorMessage>Project Number is Required and must belong to the Inventory Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Read_Only_Division_Field</fullName>
        <active>true</active>
        <description>Ticket #3798</description>
        <errorConditionFormula>AND(NOT(ISNEW()) ,ISCHANGED(rstk__icinvrecon_div__c))</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_div__c</errorDisplayField>
        <errorMessage>Inventory Division Field is not Modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Serial_numbers</fullName>
        <active>false</active>
        <description>Serial numbers is Required when If given IcItem on Record is applicable for Serial Number.</description>
        <errorConditionFormula>IF( AND( ISPICKVAL( rstk__icinvrecon_icitem__r.rstk__icitem_item__r.rstk__peitem_tracksrl_pl__c  , &apos;Yes&apos;) , ISBLANK(  rstk__icinvrecon_serials__c )) , true, false)</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_serials__c</errorDisplayField>
        <errorMessage>Serial numbers is required when a given Item is Serial Controlled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Site_Validation</fullName>
        <active>true</active>
        <description>Site must match Inventory By Location Site</description>
        <errorConditionFormula>!ISBLANK(rstk__icinvrecon_iclocitem__c) &amp;&amp; !ISBLANK(rstk__icinvrecon_site__c) &amp;&amp;
rstk__icinvrecon_iclocitem__r.rstk__iclocitem_site__c != rstk__icinvrecon_site__c</errorConditionFormula>
        <errorMessage>Site must match Inventory By Location Site</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Transaction_Date</fullName>
        <active>true</active>
        <description>If Transaction Date is Empty</description>
        <errorConditionFormula>ISBLANK(rstk__icinvrecon_date__c)</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_date__c</errorDisplayField>
        <errorMessage>Transaction Date is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Zero_Confirmed</fullName>
        <active>true</active>
        <description>If Zero Confirmed is set to True then Location Quantity should be set to 0.</description>
        <errorConditionFormula>IF( AND( rstk__icinvrecon_zeroconf__c , OR(ISBLANK( rstk__icinvrecon_locqty__c ),rstk__icinvrecon_locqty__c != 0 )) , true, false)</errorConditionFormula>
        <errorDisplayField>rstk__icinvrecon_zeroconf__c</errorDisplayField>
        <errorMessage>Location Quantity should be set to 0 when Zero On Hand Confirmed is Set to True.</errorMessage>
    </validationRules>
</CustomObject>